bridge/base/fastapi-expose.yaml
#! fastapi-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: fastapi
    namespace: backend-assessment
    labels:
        com.docker.compose.project: backend-assessment
        com.docker.compose.service: fastapi
spec:
    selector:
        com.docker.compose.project: backend-assessment
        com.docker.compose.service: fastapi
    ports:
        - name: fastapi-8000
          port: 8000
          targetPort: fastapi-8000
