bridge/base/flask-expose.yaml
#! flask-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: flask
    namespace: backend-assessment
    labels:
        com.docker.compose.project: backend-assessment
        com.docker.compose.service: flask
spec:
    selector:
        com.docker.compose.project: backend-assessment
        com.docker.compose.service: flask
    ports:
        - name: flask-5000
          port: 5000
          targetPort: flask-5000
